--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -33,7 +33,7 @@ Heading and Caption
   Pagnation style
   ------------------*/
 .pag-list {
-  @apply inline px-4 py-2 rounded;
+  @apply inline px-3 py-2 rounded;
 }
 
 .pag-arrow {
